Define problem entities

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,9 @@
 add_executable(main
     main.cpp)
+
+add_library(problemEntities 
+    problemEntities/GroupingProblemInstance.cpp)
+
+target_include_directories(problemEntities PUBLIC 
+${CMAKE_CURRENT_SOURCE_DIR} 
+)
