--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,23 @@
+cmake_minimum_required(VERSION 3.28)
 project(GroupingProblem)
-cmake_minimum_required(VERSION 3.22)
+
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include(FetchContent)
+
+# G-TEST
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG v1.16.0
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+include(GoogleTest)
 
 add_subdirectory(src)
+add_subdirectory(tests)
+
