Add visualization with OpenCV

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,14 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "regex": "cpp",
+        "future": "cpp",
+        "typeindex": "cpp"
     }
 }
