Refactor directory structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,7 @@ add_library(problemEntities
 target_include_directories(problemEntities PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR} 
 )
+
+if(ENABLE_VISUALIZATION)
+  add_subdirectory(visualization)
+endif()
