Add reader utils

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,19 @@ target_include_directories(problemEntities PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR} 
 )
 
+add_library(reader
+    reader/ReaderUtils.cpp
+)
+
+target_link_libraries(reader 
+    problemEntities
+    flatbuffers
+)
+
+target_include_directories(reader PUBLIC 
+    ${CMAKE_BINARY_DIR}
+)
+
 if(ENABLE_VISUALIZATION)
   add_subdirectory(visualization)
 endif()
