Implement genetic algorithm solver

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(groupingProblem
 target_link_libraries(groupingProblem
     problemEntities
     reader
+    solver
 )
 
 if(ENABLE_VISUALIZATION)
